--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/nuxt": "^0.1.0",
+    "bcryptjs": "^2.4.3",
     "nuxt": "^3.14.1592",
     "vue": "latest",
     "vue-router": "latest"
