--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/nuxt": "^0.1.0",
     "bcryptjs": "^2.4.3",
     "nuxt": "^3.14.1592",
+    "sweetalert2": "^11.14.5",
     "vue": "latest",
     "vue-router": "latest"
   },
