--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "nuxt": "^3.14.1592",
     "sweetalert2": "^11.14.5",
+    "validator": "^13.12.0",
     "vue": "latest",
     "vue-router": "latest"
   },
