Auth with jsonwebtokens

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@prisma/nuxt": "^0.1.0",
     "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
     "nuxt": "^3.14.1592",
     "sweetalert2": "^11.14.5",
     "validator": "^13.12.0",
